# rust-on-aws-lambda

./: Cargo.toml  README.md
src/: main.rs
