[package]
name = "rust-on-aws-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.7.0" # AWS Lambda Runtime
tokio = "1.21.2" # for async networking
serde = { version = "1.0.147", features = ["derive"] } # for JSON serialization